# market_update_automation

./: .gitignore  AGENTS.md  BATCH_CONVERSION_GUIDE.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt
agents/: README.md  data_engineer.md  director.md  financial_data_analyst.md  general_insurance_analyst.md  life_insurance_analyst.md  macroeconomic_analyst.md  reinsurance_analyst.md  report_compiler.md
agents/data_engineer/: agent.md  heartbeat.md  soul.md  tools.md
agents/director/: agent.md  heartbeat.md  routing.md  soul.md  tools.md
agents/financial_data_extraction/: agent.md  heartbeat.md  soul.md  tools.md
agents/general_insurance_analyst/: agent.md  heartbeat.md  soul.md  tools.md
agents/life_insurance_analyst/: agent.md  heartbeat.md  soul.md  tools.md
agents/macroeconomic_analyst/: agent.md  heartbeat.md  soul.md  tools.md
agents/reinsurance_analyst/: agent.md  heartbeat.md  soul.md  tools.md
agents/report_compiler/: agent.md  heartbeat.md  soul.md  tools.md
assets/: List Link Lapkeu.xlsx  MarketUpdate IR26.xlsx  URL Perusahaan Asuransi.xlsx  link_asuransi_jiwa.xlsx  link_asuransi_umum.xlsx  link_reasuransi.xlsx  olah data market update.xlsx
config/: companies.yml  kpi_mapping.yml  paths.yml  report_periods.yml
schemas/: company_registry_schema.json  general_insurance_schema.json  life_insurance_schema.json  macro_schema.json  reinsurance_schema.json
templates/: chart_style_guide.md  executive_summary_template.md  section_template.md
tests/: test_company.py  test_download_general_insurance.py  test_download_inare.py
(+559 files in other folders)
